--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,7 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
-  --color-primary: #29d51a;
+  --color-primary: #69f838;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
 }
